--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,24 +9,23 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
-    "format": "prettier --write .",
-    "test": "jest"
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
+    "react-dom": "^19.0.0",
+    "next": "15.3.3"
+   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/react": "^16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "9.28.0",
-    "eslint-config-next": "15.3.3",
-    "jest": "^29.7.0",
-    "prettier": "^3.3.3",
+    "eslint": "^9",
+    "eslint-config-next": "^15",
+    "jest": "^29",
+    "prettier": "^3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
