--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,20 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "ts-node-dev src/index.ts"
+    "liquid-to-html": "node src/liquid-to-html.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.0.0",
-    "express": "^5.1.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "liquidjs": "^10.0.0"
   }
 }
