--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "liquid-to-html": "node src/liquid-to-html.js",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@types/express": "^5.0.3",
@@ -11,6 +12,11 @@
     "liquidjs": "^10.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.0.3",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
