--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,15 +11,18 @@
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "test": "jest",
+    "test:e2e": "playwright test",
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.3"
-   },
+    "react-dom": "^19.0.0"
+  },
   "devDependencies": {
+    "@playwright/test": "^1.53.1",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -27,8 +30,11 @@
     "eslint": "^9",
     "eslint-config-next": "^15",
     "jest": "^29",
+    "jest-environment-jsdom": "^30.0.2",
+    "msw": "^1.3.5",
     "prettier": "^3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "whatwg-fetch": "^3.6.20"
   }
 }
