build: ESLintとStylelintの設定を強化し、カバレッジファイルを無視するように変更
ESLintの設定ファイルを更新し、不要なファイルを無視するパターンを追加
Stylelintのコマンドに.gitignoreを参照し、カバレッジディレクトリを無視するオプションを追加
これらの変更により、不要なファイルに対するリンターの実行を防ぎ、パフォーマンスを向上させる

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:html": "html-validate index.html",
     "test:a11y": "axe http://localhost:3000",
     "lint": "npm-run-all --parallel lint:*",
-    "lint:css": "stylelint '**/*.css' --fix",
+    "lint:css": "stylelint '**/*.css' --ignore-path .gitignore --ignore-pattern '**/coverage/**' --fix",
     "lint:js": "eslint .",
     "format": "prettier --write ."
   },
