--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,96 @@
+# Dependencies
 node_modules/
+.pnp
+.pnp.js
+
+# Build outputs
 .next/
-dist/
 build/
+dist/
+coverage/
+*.tsbuildinfo
+
+# Environment variables
 .env
-.env.local
-.env.development
-.env.production
+.env.*
+!.env.example
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 .DS_Store
+
+# Local development
+.cache/
+.temp/
+.tmp/
+
+# Testing
+/coverage
+.nyc_output
+
+# Production
+/out
+.next/cache/
+
+# Misc
 *.log
+*.pem
+*.p12
+*.key
+*.crt
+*.cert
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
 
 # Local work instructions
 /IMPROVEMENT_WORK_INSTRUCTIONS.md
 
-# Test coverage reports
-/apps/backend/coverage/
-
 # E2E test reports
 /apps/frontend/playwright-report/
+/apps/frontend/test-results/
+
+# Playwright
+/playwright/.cache/
+/playwright/test-results/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env.test
+
+# parcel-bundler cache (https://parceljs.org/)
+.parcel-cache/
+
+# Next.js build output
+.next
+
+# TypeScript cache
+*.tsbuildinfo
