--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "npm": ">=9.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -57,8 +59,8 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^9.0.0",
-    "lint-staged": "^15.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
     "typescript": "^5.0.0"
@@ -71,5 +73,8 @@
     "*.{json,md,yml,yaml}": [
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "netlify-cli": "^23.9.5"
   }
 }
