feat: CIパイプラインにlintステップを追加し、テスト実行を改善 feat: バックエンドの設定取得に関するテストを追加 feat: エラーハンドラーのテストを追加 feat: FileTransportのテストを強化し、カバレッジを向上 docs: バックエンドテストカバレッジ改善ワークフローを追加

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,9 +34,13 @@ jobs:
       run: npm ci
       working-directory: ./apps/backend
 
-    - name: Run frontend tests
-      run: npm run test:all
+    - name: Run linting
+      run: npm run lint
 
-    - name: Run backend tests
-      run: npm test
+    - name: Run frontend tests
+      run: npm run test
+      working-directory: ./apps/frontend
+
+    - name: Run backend tests with coverage
+      run: npm test -- --coverage
       working-directory: ./apps/backend
