fix: prevent e2e tests from hanging
- Configure Playwright reporter to not open HTML report automatically
- Set reuseExistingServer to true to work with running or stopped servers
- Add timeouts and improve test assertions for error scenarios
- Disable Firefox and WebKit browsers (only use Chromium)
- Add global timeout of 30s for tests
- All 4 E2E tests now passing without hanging

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,7 +11,8 @@
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "test": "jest",
-    "test:e2e": "playwright test",
+    "test:e2e": "playwright test --timeout=30000",
+    "test:e2e:headed": "playwright test --headed --timeout=30000",
     "test:watch": "jest --watch"
   },
   "dependencies": {
