--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@types/express": "^5.0.3",
+    "bcryptjs": "^3.0.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "liquidjs": "^10.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express-rate-limit": "^5.1.3",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/supertest": "^6.0.3",
     "jest": "^30.0.3",
     "supertest": "^7.1.1",
