--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,9 +16,15 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.554.0",
     "next": "15.3.3",
+    "next-seo": "^7.0.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.66.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@playwright/test": "^1.53.1",
