--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -24,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.66.0",
+    "resend": "^6.4.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
