feat(analytics): configure deployment environment variables
- Add NEXT_PUBLIC_PLAUSIBLE_DOMAIN to netlify.toml comments
- Add NEXT_PUBLIC_PLAUSIBLE_API_HOST to netlify.toml
- Update NETLIFY_DEPLOY.md with analytics environment variables
- Add Plausible setup instructions to deployment guide
- Update deployment checklist with analytics verification
- Verify type checking passes

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,10 @@
 [build.environment]
   NODE_VERSION = "18"
   NEXT_PUBLIC_SITE_URL = "https://connectivebyte.com"
+  # Analytics - Plausible
+  # Note: Set NEXT_PUBLIC_PLAUSIBLE_DOMAIN in Netlify UI environment variables
+  # NEXT_PUBLIC_PLAUSIBLE_DOMAIN = "connectivebyte.com"
+  NEXT_PUBLIC_PLAUSIBLE_API_HOST = "https://plausible.io"
 
 # Redirect all requests to index.html for client-side routing
 [[redirects]]
