--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@react-email/components": "^1.0.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "next": "15.3.3",
