feat(lab): add core data models and schema

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,12 @@ DATABASE_URL=postgresql://user:password@localhost:5432/connectivebyte
 JWT_SECRET=your_jwt_secret_here
 JWT_EXPIRES_IN=1d
 
+# Lab Module
+LAB_DATABASE_URL=postgresql://user:password@localhost:5432/connectivebyte_lab
+LAB_ENCRYPTION_KEY=replace-with-32-byte-hex-key
+LAB_SHARED_OPENAI_KEY=optional-shared-key
+LAB_REDIS_URL=redis://localhost:6379
+
 # Optional: External Services (uncomment and configure as needed)
 # AWS_ACCESS_KEY_ID=your_aws_access_key
 # AWS_SECRET_ACCESS_KEY=your_aws_secret_key
